Moved application to Scalatra Implemented Token-based authentication and integrated with controllers Implemented userpass authentication and integrated with controllers Implemented dependency injection with generic mapperDAO repositories Implemented json4s for conversation to/from json to domain objects Implemented logging with logback